--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>home</h1>
+        <a href="about/">About</a>
+        <a href="todo/">Todo</a>
     </body>
 </html>
