--- a/todo/index.html
+++ b/todo/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>TODO</title>
-    <link rel="stylesheet" type="text/css" href="68.39.77.31/todo-list/style.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost/todo/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <script src="lib/jquery-3.3.1.min.js"></script>
-    <script src="68.39.77.31/todo-list/app.js"></script>
+    <script src="http://localhost/lib/jquery-3.3.1.min.js"></script>
+    <script src="http://localhost/todo/app.js"></script>
   </head>
   <body>
     <div class="container" id="site">
